configure batch and course module